cmake_minimum_required(VERSION 3.26)
project(DefaultWindow)

set(CMAKE_CXX_STANDARD 14)

include_directories(.)
include_directories(Debug)
include_directories(x64)
include_directories(x64/Debug)

add_executable(DefaultWindow
        Debug/PortFolio.pch
        x64/Debug/PortFolio.pch
        AbstractFactory.h
        AnimSprite.cpp
        AnimSprite.h
        BmpMgr.cpp
        BmpMgr.h
        BossField.cpp
        BossField.h
        BossHPBar.cpp
        BossHPBar.h
        BossMonster.cpp
        BossMonster.h
        BossUI.cpp
        BossUI.h
        Bullet.cpp
        Bullet.h
        CollisionBox.cpp
        CollisionBox.h
        CollisionMgr.cpp
        CollisionMgr.h
        CTimeMgr.cpp
        CTimeMgr.h
        DefalutMonster.cpp
        DefalutMonster.h
        DefaultWindow.cpp
        DefaultWindow.h
        Define.h
        ElapseTimeMgr.cpp
        ElapseTimeMgr.h
        Entry.cpp
        Entry.h
        fmod.h
        fmod.hpp
        fmod_codec.h
        fmod_dsp.h
        fmod_errors.h
        fmod_memoryinfo.h
        fmod_output.h
        Ground.cpp
        Ground.h
        GroundTopo.cpp
        GroundTopo.h
        GuideBullet.cpp
        GuideBullet.h
        Gun.cpp
        Gun.h
        HpBar.cpp
        HpBar.h
        IcicleBullet.cpp
        IcicleBullet.h
        ImageCollection.cpp
        ImageCollection.h
        KeyMgr.cpp
        KeyMgr.h
        Line.cpp
        Line.h
        LineMgr.cpp
        LineMgr.h
        Logo.cpp
        Logo.h
        MainGame.cpp
        MainGame.h
        Monster.cpp
        Monster.h
        MonsterBullet.cpp
        MonsterBullet.h
        MonsterIceSpear.cpp
        MonsterIceSpear.h
        Mouse.cpp
        Mouse.h
        MyBmp.cpp
        MyBmp.h
        MyButton.cpp
        MyButton.h
        MyEdit.cpp
        MyEdit.h
        MyMenu.cpp
        MyMenu.h
        MyPng.cpp
        MyPng.h
        Normal.cpp
        Normal.h
        Obj.cpp
        Obj.h
        ObjMgr.cpp
        ObjMgr.h
        Player.cpp
        Player.h
        PlayerBullet.cpp
        PlayerBullet.h
        PlayerHPBar.cpp
        PlayerHPBar.h
        PlayerUI.cpp
        PlayerUI.h
        PlayerWeaponBox.cpp
        PlayerWeaponBox.h
        PngMrg.cpp
        PngMrg.h
        Resource.h
        Scene.cpp
        Scene.h
        SceneMgr.cpp
        SceneMgr.h
        ScrewBullet.cpp
        ScrewBullet.h
        ScrollMgr.cpp
        ScrollMgr.h
        Shield.cpp
        Shield.h
        Snow.cpp
        Snow.h
        SoundMgr.cpp
        SoundMgr.h
        Stage.cpp
        Stage.h
        StageEntry.cpp
        StageEntry.h
        stdafx.cpp
        stdafx.h
        SubMonster.cpp
        SubMonster.h
        Sword.cpp
        Sword.h
        targetver.h
        Tile.cpp
        Tile.h
        TileMgr.cpp
        TileMgr.h
        Village.cpp
        Village.h
        Wall.cpp
        Wall.h)
